# learn-tensorflow

./: 02.ipynb  04.ipynb  05.ipynb  README.md  pyproject.toml
notebooks/: 01.ipynb  02.ipynb  03.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb
