[project]
name = "learn-tensorflow"
version = "0.1.0"
description = ""
authors = [
    {name = "klxcoder",email = "klxcoder@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "matplotlib (==3.8.3)",
    "tensorflow (==2.16.1)",
    "notebook (==7.0.8)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
